fixed lookup tool layout issue

--- a/media/css/mkt/lookup-tool.less
+++ b/media/css/mkt/lookup-tool.less
@@ -233,7 +233,6 @@ h1 {
 }
 
 .shortcuts {
-    float: left;
     li {
         margin: 20px 0;
         text-align: left;
